--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.sidm.mgp_lab02_153492y">
 
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/mobile_icon"
@@ -65,6 +66,26 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".FacebookLogin"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="MGP_Lab02_153492Y"/>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="944827045647516"/>
+
+        <provider
+            android:authorities="com.facebook.app.FacebookContentProvider944827045647516"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true"/>
 
     </application>
 
